# Dowser

./: .gitignore  pyproject.toml
notebooks/: 00_ingest_and_join.ipynb  01_download_features_gee.ipynb  02_point_sampling_train_models.ipynb
src/dowser/: config.py  data_io.py  geo.py  summaries.py
src/dowser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
